--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "sass": "^1.59.2",
     "typescript": "4.9.5"
   },
