--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
-    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "sass": "^1.59.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.10.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
