--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.12",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "@mui/x-date-pickers": "^6.0.2",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
