--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@mui/x-date-pickers": "^6.0.2",
+    "@react-18-pdf/renderer": "^2.3.4",
+    "@react-pdf/renderer": "^3.1.8",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -27,11 +29,13 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-pdf": "^6.2.2",
     "sass": "^1.59.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/react-datepicker": "^4.10.0",
+    "@types/react-pdf": "^6.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
