--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "cookie-cutter": "^0.2.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "eslint": "8.35.0",
