--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-pdf": "^6.2.0",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.1.0"
   }
 }
