--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "cookie-cutter": "^0.2.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "js-cookie": "^3.0.5",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
@@ -40,5 +42,6 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "proxy": "http://localhost:3002/"
 }
