--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start -p 3003",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest --coverage --watchAll"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
