--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
