--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-pdf": "^6.2.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.12.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-extended": "^3.2.4",
