--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start -p 3003",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -34,12 +35,21 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-pdf": "^6.2.0",
+    "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.14",
+    "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-extended": "^3.2.4",
     "postcss": "^8.4.21",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.1.0"
   }
